--- a/client/static/style.css
+++ b/client/static/style.css
@@ -7,6 +7,10 @@ input {
     font-weight: normal;
 }
 
+form {
+    width: 100%;
+}
+
 .vertical-align {
     display: flex;
     align-items: center;
@@ -24,10 +28,45 @@ input {
     margin-bottom: 0;
 }
 
+#chat-msgs-list {
+    height:500px;
+    overflow-y: scroll;
+}
+
 #textarea-col {
     padding: 0;
 }
 
 #chat-input-row, #node-input-row {
     padding-top: 0;
+}
+
+#file-input {
+    width: 100%;
+    padding-bottom: 10px;
+}
+
+#file-index-status, #file-download-status {
+    padding-top: 10px;
+}
+
+.alert {
+    margin-bottom: 1px;
+    line-height:30px;
+    padding:0 15px;
+}
+
+#download-spinner {
+    border: 7px solid #f3f3f3;
+    border-top: 7px solid #3498db;
+    border-radius: 60%;
+    width: 30px;
+    height: 30px;
+    animation: spin 2s linear infinite;
+    margin: 0 auto;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
