Transcode audio files when sharing and be able to reproduce them on the UI

--- a/client/static/style.css
+++ b/client/static/style.css
@@ -71,3 +71,18 @@ form {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+.play-button {
+    float: right;
+    width: 20px;
+    text-align: center;
+
+}
+
+.play-button:hover {
+    color: cornflowerblue;
+}
+
+#player-container {
+    display: none;
+}
